replace isBlank method